--- a/Company-Home-Page/style.css
+++ b/Company-Home-Page/style.css
@@ -18,10 +18,20 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
 }
 
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
   z-index: 10;
   position: fixed;
   height: 80px;
@@ -118,6 +128,26 @@ nav a {
   color: black;
 }
 
+.boxOutlineWhite {
+  border: white solid 3px;
+  width: 50%;
+  height: 40%;
+  position: absolute;
+  z-index: 0;
+  -webkit-transform: translateX(150px);
+          transform: translateX(150px);
+}
+
+.boxOutlineRed {
+  margin: auto;
+  border: black solid 3px;
+  width: 50%;
+  height: 60vh;
+  position: absolute;
+  padding: 50px;
+  z-index: 0;
+}
+
 .stretchLeft {
   width: 100%;
 }
@@ -147,12 +177,13 @@ nav a {
 
 #WhatWeDo p {
   padding: 30px;
+  z-index: 2;
   width: 50%;
 }
 
 #OurWork {
   height: 100vh;
-  background-image: url(./imgs/Background-red-small-fade.jpg);
+  background-image: url(./imgs/Background-red-small-fade.png);
   background-size: cover;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
@@ -163,7 +194,15 @@ nav a {
           justify-content: center;
 }
 
-#OurWork #gallery {
+#OurWork h1 {
+  margin-left: 30px;
+  text-align: left;
+  font-size: 5em;
+  line-height: 0.9;
+  color: #bb2026;
+}
+
+#gallery {
   border: white solid;
   overflow: hidden;
   height: 50%;
@@ -186,17 +225,126 @@ nav a {
           flex-grow: 0;
 }
 
-#OurWork #gallery img {
+#gallery img {
   padding: 5px;
   max-height: 50%;
   width: auto;
 }
 
-#OurWork h1 {
-  margin-left: 30px;
-  text-align: left;
-  font-size: 5em;
-  line-height: 0.9;
+#MeetTheTeam {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh;
+  background-image: url(./imgs/Meet-us-bg.jpg);
+  background-attachment: fixed;
+  background-position: top;
+  background-size: cover;
+}
+
+#MeetTheTeam h1 {
+  font-size: 3em;
   color: #bb2026;
+}
+
+.members {
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.member {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 20px;
+  width: 50%;
+  text-align: center;
+  height: 100%;
+}
+
+.member .redBox {
+  margin-top: 30px;
+}
+
+.member img {
+  margin-left: auto;
+  margin-right: auto;
+  border: white solid 5px;
+  -webkit-box-shadow: 8px 4px 8px rgba(0, 0, 0, 0.404);
+          box-shadow: 8px 4px 8px rgba(0, 0, 0, 0.404);
+  width: 50%;
+}
+
+.member h2 {
+  color: white;
+  font-size: 2em;
+}
+
+#Contact {
+  margin: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-image: url(./imgs/Background.jpg);
+  background-size: contain;
+  text-align: center;
+  line-height: 1.4;
+  height: 100vh;
+}
+
+#info {
+  width: 50%;
+  background-color: white;
+  padding: 100px;
+  opacity: 0.95;
+}
+
+#info h1 {
+  font-size: 3em;
+  color: #bb2026;
+  padding: 10px;
+  margin-bottom: 40px;
+  color: white;
+  font-style: italic;
+}
+
+#email {
+  padding-top: 30px;
+  font-weight: lighter;
+}
+
+.white-teeth {
+  content: "";
+  background-image: url(./imgs/white-Teeth.png);
+  background-size: initial;
+  background-repeat: repeat-x;
+  position: absolute;
+  background-position: bottom;
+  width: 100%;
+  height: 50px;
+  -webkit-transform: translateY(-40px);
+          transform: translateY(-40px);
+}
+
+.red-teeth {
+  content: "";
+  background-image: url(./imgs/red-Teeth.png);
+  background-size: initial;
+  background-repeat: repeat-x;
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  background-position: top;
 }
 /*# sourceMappingURL=style.css.map */
