--- a/Company-Home-Page/style.scss
+++ b/Company-Home-Page/style.scss
@@ -18,10 +18,14 @@ p {
 .flex-container {
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 100%;
 }
 
 header {
+  display: flex;
+  align-items: center;
+  width: 100%;
   z-index: 10;
   position: fixed;
   height: 80px;
@@ -101,12 +105,31 @@ nav {
   color: black;
 }
 
+.boxOutlineWhite {
+  border: white solid 3px;
+  width: 50%;
+  height: 40%;
+  position: absolute;
+  z-index: 0;
+  transform: translateX(150px);
+}
+
+.boxOutlineRed {
+  margin: auto;
+  border: black solid 3px;
+  width: 50%;
+  height: 60vh;
+  position: absolute;
+  padding: 50px;
+  z-index: 0;
+}
 .stretchLeft {
   width: 100%;
 }
 
 #WhatWeDo {
   height: 100vh;
+
   flex-direction: row;
   justify-content: center;
   background-image: url(./imgs/smoke.jpg);
@@ -122,34 +145,18 @@ nav {
   }
   p {
     padding: 30px;
+    z-index: 2;
     width: 50%;
   }
 }
 
 #OurWork {
   height: 100vh;
-  background-image: url(./imgs/Background-red-small-fade.jpg);
+  background-image: url(./imgs/Background-red-small-fade.png);
   background-size: cover;
   flex-direction: row-reverse;
   justify-content: center;
 
-  #gallery {
-    border: white solid;
-    overflow: hidden;
-    height: 50%;
-    width: 80%;
-    display: flex;
-    align-content: center;
-    justify-content: space-around;
-    flex-direction: column;
-    flex-wrap: wrap;
-    flex-grow: 0;
-    img {
-      padding: 5px;
-      max-height: 50%;
-      width: auto;
-    }
-  }
   h1 {
     margin-left: 30px;
     text-align: left;
@@ -157,4 +164,115 @@ nav {
     line-height: 0.9;
     color: $main-red;
   }
+}
+
+#gallery {
+  border: white solid;
+  overflow: hidden;
+  height: 50%;
+  width: 80%;
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
+  flex-direction: column;
+  flex-wrap: wrap;
+  flex-grow: 0;
+  img {
+    padding: 5px;
+    max-height: 50%;
+    width: auto;
+  }
+}
+
+#MeetTheTeam {
+  flex-direction: column;
+  height: 100vh;
+  background-image: url(./imgs/Meet-us-bg.jpg);
+  background-attachment: fixed;
+  background-position: top;
+  background-size: cover;
+  h1 {
+    font-size: 3em;
+    color: $main-red;
+  }
+}
+
+.members {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.member {
+  flex-direction: column;
+  padding: 20px;
+  width: 50%;
+  text-align: center;
+  height: 100%;
+  .redBox {
+    margin-top: 30px;
+  }
+  img {
+    margin-left: auto;
+    margin-right: auto;
+    border: white solid 5px;
+    box-shadow: 8px 4px 8px rgba(0, 0, 0, 0.404);
+    width: 50%;
+  }
+  h2 {
+    color: white;
+    font-size: 2em;
+  }
+}
+
+#Contact {
+  margin: auto;
+  flex-direction: column;
+  background-image: url(./imgs/Background.jpg);
+  background-size: contain;
+  text-align: center;
+  line-height: 1.4;
+  height: 100vh;
+}
+#info {
+  width: 50%;
+  background-color: white;
+  padding: 100px;
+  opacity: 0.95;
+  h1 {
+    font-size: 3em;
+    color: $main-red;
+    padding: 10px;
+    margin-bottom: 40px;
+    color: white;
+    font-style: italic;
+  }
+}
+#email {
+  padding-top: 30px;
+  font-weight: lighter;
+}
+
+.white-teeth {
+  content: "";
+  background-image: url(./imgs/white-Teeth.png);
+  background-size: initial;
+  background-repeat: repeat-x;
+  position: absolute;
+  background-position: bottom;
+  width: 100%;
+  height: 50px;
+  transform: translateY(-40px);
+}
+
+.red-teeth {
+  content: "";
+  background-image: url(./imgs/red-Teeth.png);
+  background-size: initial;
+  background-repeat: repeat-x;
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  background-position: top;
 }
