--- a/style.scss
+++ b/style.scss
@@ -84,7 +84,7 @@ nav {
 #mission::before {
   z-index: -1;
   content: "";
-  background-image: url(/Company-Home-Page/imgs/waffles.jpg);
+  background-image: url(./imgs/waffles.jpg);
   background-size: cover;
   position: absolute;
   top: 0px;
